--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   google_fonts:
   firebase_auth:
   hidden_drawer_menu:
+  cloud_firestore:
+  curved_navigation_bar: ^1.0.3
 
 dev_dependencies:
   flutter_test:
